# ESP_Project

./: .gitignore  README.md
firmware/: Doxyfile  personal_partition.csv
firmware/FT_gateway/: .gitignore  CMakeLists.txt  sdkconfig
firmware/FT_gateway/main/: CMakeLists.txt  Kconfig.projbuild  dateTimeNTP.c  dateTimeNTP.h  httpServer.c  httpServer.h  ledRGB.c  ledRGB.h  main.c  nvsApp.c  nvsApp.h  otaUpdate.c  otaUpdate.h  projectConfig.h  router.c  router.h  tasks_common.h  wifiApp.c  wifiApp.h
firmware/FT_gateway/main/webPage/: app.css  app.js  index.html
firmware/docs/html/: annotated.html  annotated_dup.js  classes.html  date_time_n_t_p_8c.html  date_time_n_t_p_8c.js  date_time_n_t_p_8c_source.html  date_time_n_t_p_8h.html  date_time_n_t_p_8h.js  date_time_n_t_p_8h_source.html  dir_6d3f4850756140aca20ed483bc09cc7c.html  dir_6d3f4850756140aca20ed483bc09cc7c.js  dir_941a1f781e5356755935254f574adadf.html  dir_941a1f781e5356755935254f574adadf.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  http_server_8c.html  http_server_8c.js  http_server_8c_source.html  http_server_8h.html  http_server_8h.js  http_server_8h_source.html  index.html  led_r_g_b_8c.html  led_r_g_b_8c.js  led_r_g_b_8c_source.html  led_r_g_b_8h.html  led_r_g_b_8h.js  led_r_g_b_8h_source.html  main_8c.html  main_8c.js  (+35 more)
firmware/docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_5.js  (+62 more)
